tests/baselines/reference/exportSameNameFuncVar.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportSameNameFuncVar.ts(1,12): error TS2300: Duplicate identifier 'a'.
exportSameNameFuncVar.ts(2,17): error TS2300: Duplicate identifier 'a'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportSameNameFuncVar.ts (2 errors) ====
    export var a = 10;
               ~
!!! error TS2300: Duplicate identifier 'a'.
    export function a() {
                    ~
!!! error TS2300: Duplicate identifier 'a'.
    }